# daicer

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  .strapi-updater.json  .tmp_entities.json  .tmp_items.json  .zshrc-nvm-auto  01_spell_compilation.md  02_equipment_compilation.md  03_feature_compilation.md  04_trait_compilation.md  05_race_compilation.md  06_class_compilation.md  07_entity_compilation.md  AGENTS.md  CODEBASE_WEAKNESS_REPORT.md  COMPILATION_PROTOCOL.md  CONTRIBUTING.md  CORE_ARCHITECTURE.md  COVERA.md  Dockerfile  GRID_SYSTEM_MASTER_PLAN.md  NewImprovementPlan  PROPOSAL_01_UNIFIED_TYPE_SYSTEM.md  PROPOSAL_02_DETERMINISTIC_ACTION_ENGINE.md  PROPOSAL_03_STRICT_ENTITY_BOUNDARIES.md  PROPOSAL_04_SPEED_MIGRATION_PLAN.md  README.md  THE_SOLID_BASE.md  TODO_TESTS_TO_FIX.md  TODO_TEST_CODESMELL.md  TO_DOC.md  before-front-end-prework-proposal.md  check-doc.ts  classes.md  cocov.json  compare_maps.cjs  component-list.json  (+80 more)
.cocov/: config.json  history.jsonl
.cursor/: mcp.json
.husky/: pre-commit
.tmp/: test.db
STRAPI_DOC/: 00_STRAPI_MASTER_MAP.md
aether-voxel-engine/: App.tsx  README.md  index.html  metadata.json  package.json
backend/: .env.example  .eslintrc.json  .gitignore  :memory:  Dockerfile  README.md  codegen_error.txt  codegen_error_2.txt  debug-col.js  debug_output.txt  env.docker.example  eslint.config.mjs  extend_files_offenders.md  jest.config.js  package.json  table_dump.txt  test_failure.txt  test_output.txt  test_output_cli.txt  test_output_cli_debug.txt  (+8 more)
python-llm/: README.md  bridge.py  pyproject.toml
(+13399 files in other folders)
